--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section id="about" class="about container section">
         <div class="about__content">
           <div class="about__pfp img-wrapper">
-            <img class="about__image" src="Akrambenmoumen.jpg" alt="Personal Picture" />
+            <img class="about__image" src="mypfp.jpg" alt="Personal Picture" />
           </div>
           <h1 class="about__title">Who am <strong>I</strong>?</h1>
           <p class="about__introduction">
@@ -107,7 +107,7 @@
                 </li>
                 <li class="describe-skill">
                   <p>
-                    namly front-end web dev.
+                    Namly front-end web dev (HTML, CSS, JS).
                   </p>         
                 </li>
               </ul>
@@ -138,7 +138,7 @@
                 </li>
                 <li class="describe-skill">
                   <p>
-                    both as long documentaries, and heavily-edited bursts
+                    As both long documentaries, and heavily-edited bursts.
                   </p>         
                 </li>
               </ul>
@@ -167,7 +167,7 @@
                 </li>
                 <li class="describe-skill">
                   <p>
-                    In the form of heavily reseached mini-essays, media-reviews, and deep dives into topics that pique my interest
+                    In the form of heavily reseached mini-essays, media-reviews, and deep dives into topics that pique my interest.
                   </p>
                 </li>
               </ul>
@@ -198,7 +198,7 @@
                 </li>
                 <li class="describe-skill">
                   <p>
-                    Strengthened throughout my three years as both a student, and a teacher
+                    Which has been tested throughout my three years as both a student, and a teacher in ESEFB.
                   </p>
                 </li>
               </ul>
@@ -209,7 +209,7 @@
       <section class="latest container section">
         <h3 class="latest__title">Upcoming..</h3>
         <div class="img-wrapper">
-          <img id="webgameshub__img" src="landingpage.png" alt="Web Games Website Overview">
+          <img class="website-image" src="landingpage.png" alt="Web Games Website Overview">
         </div>
         <div class="latest__wrapper">
           <h2 class="latest__name">Paradocixal Shift!</h2>
@@ -228,19 +228,19 @@
       <section id="latest" class="projects container section">
         <h2 class="projects__title">Projects</h2>
         <article>
-          <h3><a href="https://3katsomi.github.io/webgameshub/index.html" target="_blank">Web Games Hub!</a></h3>
+          <h3><a href="https://softnoise.netlify.app/" target="_blank">Soft Noise</a></h3>
           <div class="img-wrapper">
-            <img id="webgameshub__img" src="Web Games.png" alt="Web Games Website Overview">
+            <img class="website-image" src="soft noise.png" alt="Soft Noise Website Overview">
           </div>
           <p class="projects__description descriptive-text">
-            Discover the limitless possibilities in each game and enjoy a marvelous advanture in the web games!
+            Discover the limitless possibilities within each game and enjoy a marvelous advanture in those minimal and fun web games !
           </p>
         </article>
         <hr>
         <article>
-          <h3><a href="https://myedits.netlify.app/" target="_blank">Myedits</a></h3>
+          <h3><a href="https://myedits.netlify.app/" target="_blank">My Edits</a></h3>
           <div class="img-wrapper">
-            <img id="webgameshub__img" src="myedits.png" alt="Web Games Website Overview">
+            <img class="website-image" src="myedits.png" alt="Web Games Website Overview">
           </div>
           <p class="projects__description descriptive-text">
           Do you like edits? I sure do. And whenever I finish my day, I love watching my old edits in this pleasent, easy-to-use, and easy on the eye website!
