--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <section id="latest" class="projects container section">
         <h2 class="projects__title">Projects</h2>
         <article>
-          <h3><a href="https://softnoise.netlify.app/" target="_blank">Soft Noise</a></h3>
+          <h3><a href="softnoise.qzz.io" target="_blank">Soft Noise</a></h3>
           <div class="img-wrapper">
             <img class="website-image" src="soft noise.png" alt="Soft Noise Website Overview">
           </div>
